# python-project-83

./: .gitignore  Makefile  README.md  database.sql  db_manager1.py  grok_recomendation.py  grok_templates.html  pyproject.toml
.github/workflows/: linter.yml
page_analyzer/: app.py  db_manager.py  db_manager_sample.py  page_checker.py  parser.py  utils.py
page_analyzer/templates/: base.html  index.html  index_old.html  main.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/includes/: footer.html  messages.html  nav.html
page_analyzer/templates/urls/: detail.html  list.html
