[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "python-dotenv",
    "gunicorn",
    "requests>=2.32.5",
    "psycopg2>=2.9.11",
    "validators>=0.35.0",
    "bs4>=0.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

